<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart_total_price">"Totale: %1$d %2$s "</string>
    <string name="exit_text">Premi di nuovo per uscire!</string>
    <string name="check_this_out_text">%1$s prova questo!</string>
    <string name="current_balance">Credito attuale: %1$d %2$s</string>
    <string name="best_buy_text">Da provare!</string>
    <string name="password_change_success">Password cambiata con successo!</string>
    <string name="old_password_not_correct">La vecchia password non è corretta.</string>
    <string name="passwords_not_match">Le password non coincidono.</string>
    <string name="updated_informations">\"Informazioni aggiornate per: "</string>
    <string name="logout_text">Log out…</string>
    <string name="delete_user_text">Utente  %1$s cancellato. Log out…</string>
    <string name="already_logged_text">Sei già loggato in un account.</string>
    <string name="password_cannot_be_empty">La password non può essere vuota.</string>
    <string name="signup_success">"Registrazione e accesso effettuati per: %1$s"</string>
    <string name="login_success">Log In effettuato con successo!</string>
    <string name="auth_failed">Credenziali non valide!</string>
    <string name="cart_remove_dialog_text">Rimuovere %1$s dal carrello?</string>
    <string name="remove_from_cart_button">Rimuovi</string>
    <string name="abort_remove_cart_button">Annulla</string>
    <string name="purchase_confirmed">Acquisto effettuato!</string>
    <string name="confirm_button">Conferma</string>
    <string name="cancel_button">Cancella</string>
    <string name="clear_cart_text">Vuoi ripulire il carrello?</string>
    <string name="clear_cart_positive_button">Ripulisci</string>
    <string name="clear_cart_abort">Annulla</string>
    <string name="add_to_cart_text">Aggiungere %1$s al carrello?</string>
    <string name="add_to_cart_button">Aggiungi</string>
    <string name="welcome_account">Benvenuto! | Account</string>
    <string name="change_password">Cambia Password</string>
    <string name="old_password">Vecchia Password</string>
    <string name="new_password">Nuova Password</string>
    <string name="confirm_password">Conferma Password</string>
    <string name="shipping_address">Indirizzo di Spedizione</string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="phone_number">Numero di Telefono</string>
    <string name="cap">CAP</string>
    <string name="city">Città</string>
    <string name="province">Provincia</string>
    <string name="update">Modifica</string>
    <string name="clear">Pulisci</string>
    <string name="protected_area">Area Protetta</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Cancella Account</string>
    <string name="price">Prezzo</string>
    <string name="quantity">Quantità:</string>
    <string name="header_cart_text">Non lasciarti scappare nulla, acquista ora!</string>
    <string name="suggestion">Consigli</string>
    <string name="try_something_new">Prova qualcosa di nuovo!</string>
    <string name="filters">Filtri</string>
    <string name="signup">Registrati</string>
    <string name="cocktail">Cocktail</string>
    <string name="all_drinks">Tutti i Drink</string>
    <string name="liquor">Liquori</string>
    <string name="others">Altre Bevande</string>
    <string name="smoothies">Frullati</string>
</resources>