<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchManagerFragment"
    android:background="@color/neutralbackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_all_drinks"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/all_drinks" />

                <Button
                    android:id="@+id/button_all_drinks"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_bg"
                    android:text="@string/all_drinks"
                    android:clickable="false"
                    android:textColor="@color/fucsiapink"
                    android:theme="@style/filters"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_cocktail"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                app:layout_constraintEnd_toStartOf="@id/layout_smoothies"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_all_drinks">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/drinks" />

                <Button
                    android:id="@+id/button_cocktail"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_bg"
                    android:text="@string/cocktail"
                    android:textColor="@color/fucsiapink"
                    android:theme="@style/filters"
                    android:clickable="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_smoothies"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/layout_cocktail"
                app:layout_constraintTop_toBottomOf="@+id/layout_all_drinks">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/smoothies" />

                <Button
                    android:id="@+id/button_smoothies"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_bg"
                    android:text="@string/smoothies"
                    android:clickable="false"
                    android:textColor="@color/fucsiapink"
                    android:theme="@style/filters"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_mocktail"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="15dp"
                app:layout_constraintEnd_toStartOf="@id/layout_others"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_cocktail">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/liquor" />

                <Button
                    android:id="@+id/button_mocktail"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_bg"
                    android:text="@string/liquor"
                    android:clickable="false"
                    android:textColor="@color/fucsiapink"
                    android:theme="@style/filters"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_others"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/layout_mocktail"
                app:layout_constraintTop_toBottomOf="@+id/layout_smoothies">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/others" />

                <Button
                    android:id="@+id/button_others"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_bg"
                    android:text="@string/others"
                    android:clickable="false"
                    android:textSize="13sp"
                    android:textColor="@color/fucsiapink"
                    android:theme="@style/filters"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/logo_nob_fucsia"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_others" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>